# rbfmvar

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
docs/: _config.yml  api.md  changelog.md  examples.md  index.md  installation.md  quickstart.md  simulation.md  theory.md  userguide.md
examples/: example_basic.py  example_monte_carlo.py
rbfmvar/: __init__.py  covariance.py  estimation.py  results.py  simulation.py  testing.py  utils.py
tests/: __init__.py  test_covariance.py  test_estimation.py  test_testing.py  test_utils.py
