[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rbfmvar"
version = "2.0.0"
authors = [
    { name = "Dr Merwan Roudane", email = "merwanroudane920@gmail.com" }
]
description = "Residual-Based Fully Modified Vector Autoregression (RBFM-VAR) for systems with unknown mixtures of I(0), I(1), and I(2) components"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = [
    "econometrics",
    "time series",
    "VAR",
    "vector autoregression",
    "cointegration",
    "I(2)",
    "unit root",
    "Granger causality",
    "RBFM-VAR",
    "fully modified estimation"
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "statsmodels>=0.13.0",
    "matplotlib>=3.4.0",
    "tabulate>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/merwanroudane/rbfmvar"
Repository = "https://github.com/merwanroudane/rbfmvar"
Documentation = "https://github.com/merwanroudane/rbfmvar#readme"
Issues = "https://github.com/merwanroudane/rbfmvar/issues"

[tool.setuptools]
packages = ["rbfmvar"]

[tool.setuptools.package-data]
rbfmvar = ["*.md", "*.txt"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=rbfmvar --cov-report=html"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
