[metadata]
name = rbfmvar
version = 2.0.0
author = Dr. Merwan Roudane
author_email = merwanroudane920@gmail.com
description = Residual-Based Fully Modified VAR for systems with I(0), I(1), I(2) components
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/merwanroudane/rbfmvar
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Information Analysis

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.20.0
    scipy>=1.7.0
    pandas>=1.3.0
    statsmodels>=0.13.0
    matplotlib>=3.4.0
    tabulate>=0.8.0

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=3.0.0
    black>=22.0.0
    flake8>=4.0.0
docs =
    sphinx>=4.0.0
    sphinx-rtd-theme>=1.0.0

[options.packages.find]
where = .

[flake8]
max-line-length = 88
extend-ignore = E203, W503

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = -v --cov=rbfmvar
